--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "three": "^0.160.0",
+    "three-stdlib": "^2.29.4",
     "uuid-by-string": "^4.0.0",
     "wouter": "^2.12.1"
   },
